# gelato

./: .gitignore  README.md  create_full_dataset.py  create_test_dataset.py  generate_test_data.py  plan.md  process_real_sample.py  pyproject.toml  train.py  verify_setup.py
conf/: alignment.yml  eval.yaml  inter.yml
docs/files/: SYNC_ANALYSIS.md  static2_sync.py  strip_abc_sync.py  test_suite.py  tokenizer_sync.py
gelato/data/: canonicalize.py  dataset.py  renderer.py
gelato/model/: modeling.py  resampler.py
gelato/utils/: tokenizer.py
scripts/: clean_empty_patches.sh
src/gelato/data/: converter.py  dataset.py  renderer.py
src/gelato/dataset/: clean_dataset.py  easy_writer.py  inject_mxl_ids.py  inter_writer.py  mxl2abc.py  paginate_mxl.py  render_dataset.py  strip_abc.py
src/gelato/metrics/: error_rates.py  errot_rates.py
src/gelato/model/: layers.py  modeling.py  models.py  resampler.py  static.py  static2.py  tokenizer.py
src/gelato/scripts/: create_full_dataset.py  create_test_dataset.py  evaluate.py  generate_test_data.py  main.py  process_real_sample.py  train.py  verify_setup.py
src/gelato/train/: dataset.py  eval.py  pretrain.py  train.py  trainer.py  utils.py
